# codex-telegram

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
config/: codex_telegram.example.toml
deploy/: .env.example  README.md  docker-compose.example.yaml
deploy/codex-app-server/: Dockerfile.base
deploy/codex-app-server/agent-template/: README.md
deploy/codex-app-server/scripts/: codex-telegram-bridge  codex-telegram-send-attachment  codex-telegram-webhook  docker-entrypoint.sh
docs/: architecture.md  compatibility.md
examples/agent-template/: AGENTS.md
examples/agent-template/.codex/: config.toml
scripts/: build-image.sh  build-runtime-images.sh  cut-release.py
src/codex_telegram/: __init__.py  config.py  observability.py
src/codex_telegram/adapters/: filesystem.py
src/codex_telegram/application/: __init__.py  approvals.py  conversations.py  models.py  ports.py  profiles.py  service.py  settings.py  webhooks.py  (+1 more)
tests/: test_app_server_client.py  test_approvals.py  test_attachment_delivery.py  test_bot_entrypoint.py  test_codex_app_server_entrypoint.py  test_config.py  test_conversations.py  test_cut_release.py  test_filesystem_adapter.py  test_multi_codex_backend.py  test_observability.py  test_profiles.py  test_service.py  test_settings_service.py  test_speech_to_text.py  test_sqlite_repository.py  test_telegram_commands.py  test_telegram_helpers.py  test_telegram_runner.py  test_turn_stream.py  test_voice_input.py  test_webhook.py  test_webhook_runner.py  test_webhook_service.py
(+26 files in other folders)
